--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.11.1",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/pg": "^8.15.6",
+    "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "kysely": "^0.28.8",
     "next": "^15.1.3",
+    "next-auth": "^4.24.13",
+    "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
