--- a/package.json
+++ b/package.json
@@ -6,30 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.41.1",
     "@auth/pg-adapter": "^1.11.1",
-    "@types/bcryptjs": "^3.0.0",
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^6.18.0",
     "@types/pg": "^8.15.6",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.9",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
     "kysely": "^0.28.8",
     "next": "^15.1.3",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
+    "prisma": "^6.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
