--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "kysely": "^0.28.8",
     "next": "^15.1.3",
     "next-auth": "^5.0.0-beta.30",
+    "node-ssh": "^13.2.1",
     "pg": "^8.16.3",
     "prisma": "^6.18.0",
     "react": "^19.0.0",
